# interpreter

./: CMakeLists.txt  Commands.cpp  Commands.h  CommandsTests.cpp  Core.cpp  Core.h  CoreTests.cpp  Exeptions.h  Reader.cpp  Reader.h  input.prog  input.txt  main.cpp  readme.md
programs/: basic_program.prog  cyclesAndConditions.prog
